# wiki-pics

./: CMakeLists.txt  README.md  main.cpp  main_window.cpp  main_window.hpp  picture.hpp  picture_delegate.cpp  picture_delegate.hpp  picture_list_model.cpp  picture_list_model.hpp  picture_list_view.cpp  picture_list_view.hpp  picture_loader.cpp  picture_loader.hpp  search_bar.cpp  search_bar.hpp
